Hero with image column adjustments, contact hero component swap, hero content alignment fix

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
   position: relative;
   display: flex;
+  align-items: center;
   width: 100%;
   margin-top: -72px;
   // background: $colour-beige;
@@ -31,7 +32,7 @@
         //margin-top: -50%;
 
         @media (min-width: $breakpoint-md) {
-          width: 50%;
+          width: 75%;
           margin-top: unset;
         }
       }
